flux/apps/mealie/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        readOnlyRootFilesystem: true
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.27.0
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: mealie
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: mealie-config
          livenessProbe:
            httpGet:
              path: /
              port: mealie
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: mealie
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "1G"
              cpu: ".5"
            limits:
              memory: "1G"
              cpu: ".5"

      volumes:
        - name: mealie-config
          persistentVolumeClaim:
            claimName: mealie-config
