flux/apps/mealie/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mealie
  ports:
    - name: mealie
      port: 9000
      targetPort: mealie
      protocol: TCP
